--- a/src/App.css
+++ b/src/App.css
@@ -59,6 +59,73 @@
     height: 30px;
     padding: 10px;
 }
-.params{
+
+.params {
     font-weight: 400 !important;
+}
+
+#detailsCard {
+    margin-top: 40px;
+    padding: 60px;
+    width: 100vw;
+    min-height: 500px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap;
+    font-family: 'Nunito Sans', sans-serif !important;
+}
+
+#country-details {
+    margin-top: 30px;
+    gap: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: start;
+}
+
+#country-flag {
+    width: 480px;
+    height: 300px;
+}
+
+#country-data {
+    display: flex;
+    gap: 60px;
+    flex-direction: row;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+@media screen and (max-width:480px) {
+    #detailsCard {
+        width: 100%;
+        padding: 0px;
+        margin: 0px;
+    }
+
+    #country-flag {
+        margin-bottom: 50px;
+        width: 100% !important;
+        height: auto;
+        aspect-ratio: 16/9;
+    }
+
+    #country-data {
+        display: flex;
+        flex-direction: column;
+    }
+}
+
+
+@media screen and (max-width:963px) and (min-width:480px) {
+    #country-data {
+        display: flex;
+        flex-direction: column;
+    }
+
+    #detailsCard {
+        width: 480px;
+    }
 }
